# test

./: CMakeLists.txt  README.md  test.spec
bad/: CMakeLists.txt
good/: CMakeLists.txt
